--- a/excercise.ipynb
+++ b/excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = 'pretrained/2017-08-04_00.55.19.pth'\n",
+    "pretrained = torch.load(MODEL_PATH)\n",
+    "vocab = pretrained['vocab']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,14 +577,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_PATH = 'pretrained/2017-08-04_00.55.19.pth'\n",
-    "pretrained = torch.load(MODEL_PATH)\n",
-    "vocab = pretrained['vocab']\n",
-    "\n",
     "vqa_net = VQANet(embedding_tokens=len(vocab['question']) + 1)   # +1 for <unknown> token at index 0\n",
     "vqa_net.eval()\n",
     "\n",
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +656,7 @@
       "processed_q: ['what', 'is', 'the', 'table', 'made', 'of']\n",
       "encoded_q: (tensor([ 3,  2,  1, 68, 59,  9]), tensor(6))\n",
       "answers: ['wood', 'wood', 'wood', 'wood', 'wood', 'wood', 'wood', 'wood', 'wood', 'wood']\n",
-      "image_path: mscoco/val2014/COCO_val2014_000000350623.jpg\n"
+      "image_path: example_images/COCO_val2014_000000350623.jpg\n"
      ]
     }
    ],
@@ -663,13 +670,13 @@
     "\n",
     "answers = [a['answer'] for a in answers_json['annotations'][0]['answers']]\n",
     "print('answers:', answers)\n",
-    "image_path = 'mscoco/val2014/COCO_val2014_{:012d}.jpg'.format(questions_json['questions'][0]['image_id'])\n",
+    "image_path = 'example_images/COCO_val2014_{:012d}.jpg'.format(questions_json['questions'][0]['image_id'])\n",
     "print('image_path:', image_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
